@@ -1,0 +1,3 @@
+パスワードを変更するには、以下のリンクをたどってください:
+
+http://<%= Setting.host_name %>/account/lost_password?token=<%= @token.value %>
